--- a/ProyectoPooDist/src/Inicio/INICIOPINEED.form
+++ b/ProyectoPooDist/src/Inicio/INICIOPINEED.form
@@ -65,16 +65,16 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
+                          <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="393" max="-2" attributes="0"/>
                               <Component id="jTextField5" min="-2" pref="293" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="102" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
                               <Component id="jPanel4" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace pref="427" max="32767" attributes="0"/>
+                      <EmptySpace pref="303" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -124,38 +124,46 @@
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                              <Component id="btnRegresarLogin" alignment="0" max="32767" attributes="0"/>
-                              <Component id="btnGestionDeUsuarios" alignment="0" max="32767" attributes="0"/>
-                              <Component id="btnGestionDeCamiones" alignment="0" max="32767" attributes="0"/>
-                              <Component id="btnGestionDePilotos" alignment="0" max="32767" attributes="0"/>
-                              <Component id="btnCalendario" alignment="0" max="32767" attributes="0"/>
-                              <Component id="btnGestionDeCreditos" alignment="0" max="32767" attributes="0"/>
-                              <Group type="103" alignment="0" groupAlignment="1" attributes="0">
-                                  <Component id="btnGestionDeClientes" alignment="1" min="-2" pref="186" max="-2" attributes="0"/>
-                                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                                      <Component id="btnGestionDeVentas" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="btnPlanillaDeTrabajadores" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="btnGestionDePedidos" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="btnInventarioDeQuintales" alignment="0" min="-2" pref="187" max="-2" attributes="0"/>
-                                  </Group>
+                          <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                                  <Component id="btnGestionDeUsuarios" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="btnGestionDePilotos" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="btnGestionDeVentas" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="btnGestionDePedidos" alignment="0" min="-2" pref="187" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="btnCerrarSesion" min="-2" pref="187" max="-2" attributes="0"/>
+                              <Component id="btnGestionDeCreditos" alignment="0" min="-2" pref="187" max="-2" attributes="0"/>
+                              <Component id="btnGestionDeClientes" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
+                              <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                                  <Component id="btnRegresarLogin" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="btnCerrarSesion" min="-2" pref="187" max="-2" attributes="0"/>
+                                  <Component id="btnCalendario" alignment="1" min="-2" pref="187" max="-2" attributes="0"/>
+                              </Group>
+                              <Component id="btnGestionDeCamiones" alignment="0" min="-2" pref="187" max="-2" attributes="0"/>
+                              <Component id="btnPlanillaDeTrabajadores" alignment="0" min="-2" pref="187" max="-2" attributes="0"/>
+                              <Component id="btnInventarioDeQuintales" alignment="0" min="-2" pref="187" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="20" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="18" max="32767" attributes="0"/>
+                          <Component id="btnCalendario" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Component id="btnRegresarLogin" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Component id="btnCerrarSesion" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Component id="btnGestionDeCamiones" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Component id="btnPlanillaDeTrabajadores" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="btnInventarioDeQuintales" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="btnGestionDePedidos" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-                          <Component id="btnPlanillaDeTrabajadores" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="btnGestionDeVentas" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -163,18 +171,10 @@
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="btnGestionDeCreditos" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="btnCalendario" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="btnGestionDePilotos" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="btnGestionDeCamiones" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="btnGestionDeUsuarios" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="btnRegresarLogin" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="btnCerrarSesion" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
