--- a/ProyectoPooDist/src/GestionDeUsuarios/AGREGARGESTIONUSUARIOS.form
+++ b/ProyectoPooDist/src/GestionDeUsuarios/AGREGARGESTIONUSUARIOS.form
@@ -242,10 +242,9 @@
                   <Font name="Nirmala UI" size="12" style="0"/>
                 </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="3">
-                    <StringItem index="0" value="USUARIO"/>
+                  <StringArray count="2">
+                    <StringItem index="0" value="SECRETARIA"/>
                     <StringItem index="1" value="ADMINISTRADOR"/>
-                    <StringItem index="2" value="SECRETARIA"/>
                   </StringArray>
                 </Property>
               </Properties>
@@ -428,7 +427,7 @@
             <Component class="javax.swing.JButton" name="btnMostrarContrase&#xf1;a">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="ff" green="99" red="cc" type="rgb"/>
+                  <Color blue="ff" green="99" red="99" type="rgb"/>
                 </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Nirmala UI" size="12" style="1"/>
