--- a/ProyectoPooDist/src/Login/LOGINPINEED.form
+++ b/ProyectoPooDist/src/Login/LOGINPINEED.form
@@ -66,9 +66,9 @@
               </Group>
               <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace pref="2063" max="32767" attributes="0"/>
+                      <EmptySpace pref="2197" max="32767" attributes="0"/>
                       <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="1397" max="32767" attributes="0"/>
+                      <EmptySpace pref="1532" max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -132,7 +132,7 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jPanel5" min="-2" pref="1" max="-2" attributes="0"/>
-                      <EmptySpace pref="49" max="32767" attributes="0"/>
+                      <EmptySpace pref="47" max="32767" attributes="0"/>
                       <Component id="btnIngresarPineed" min="-2" pref="30" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
                   </Group>
@@ -236,7 +236,7 @@
             <Component class="javax.swing.JLabel" name="jLabel3">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Fotos/ImagenLogoPineed.png"/>
+                  <Image iconType="3" name="/Fotos/ImagenDecoracionLogo.png"/>
                 </Property>
               </Properties>
             </Component>
@@ -268,7 +268,7 @@
         <Component class="javax.swing.JLabel" name="jLabel6">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Fotos/vege.jpeg"/>
+              <Image iconType="3" name="/Fotos/ImagenDecoracionVegetales.jpeg"/>
             </Property>
           </Properties>
         </Component>
